@@ -1643,6 +1643,57 @@ argument_list|)
 expr_stmt|;
 block|}
 annotation|@
+name|Test
+DECL|method|testMortonEncoding
+specifier|public
+name|void
+name|testMortonEncoding
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|long
+name|hash
+init|=
+name|GeoUtils
+operator|.
+name|mortonHash
+argument_list|(
+literal|180
+argument_list|,
+literal|90
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|180.0
+argument_list|,
+name|GeoUtils
+operator|.
+name|mortonUnhashLon
+argument_list|(
+name|hash
+argument_list|)
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|90.0
+argument_list|,
+name|GeoUtils
+operator|.
+name|mortonUnhashLat
+argument_list|(
+name|hash
+argument_list|)
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
 name|Nightly
 DECL|method|testRandomBig
 specifier|public
